# app/Http/Controllers/ProductsController.php
@@ -4,6 +4,7 @@ namespace App\Http\Controllers;
 
 use Exception;
 use App\Http\Requests\ProductCreateRequest;
+use App\Http\Requests\ProductUpdateRequest;
 use App\Repositories\ProductRepository;
 use App\Traits\ResponseTrait;
 use Illuminate\Http\JsonResponse;
@@ -26,7 +27,6 @@ class ProductsController extends Controller
      *     tags={"Products"},
      *     summary="Get all products for REST API",
      *     description="Multiple status values can be provided with comma separated string",
-     *     operationId="index",
      *     @OA\Parameter(
      *         name="perPage",
      *         in="query",
@@ -86,8 +86,8 @@ class ProductsController extends Controller
     {
         try {
             return $this->responseSuccess($this->productRepository->getAll(request()->all()), 'Product fetched successfully.');
-        } catch (Exception $e) {
-            return $this->responseError([], $e->getMessage());
+        } catch (Exception $exception) {
+            return $this->responseError([], $exception->getMessage(), $exception->getCode());
         }
     }
 
@@ -97,7 +97,6 @@ class ProductsController extends Controller
      *     tags={"Products"},
      *     summary="Create product",
      *     description="Create product",
-     *     operationId="store",
      *     security={{"bearer":{}}},
      *     @OA\RequestBody(
      *         description="Product objects",
@@ -148,46 +147,164 @@ class ProductsController extends Controller
     {
         try {
             return $this->responseSuccess($this->productRepository->create($request->all()), 'Product created successfully.');
-        } catch (Exception $e) {
-            return $this->responseError([], $e->getMessage());
+        } catch (Exception $exception) {
+            return $this->responseError([], $exception->getMessage(), $exception->getCode());
         }
     }
 
     /**
-     * Display the specified resource.
-     *
-     * @param  int  $id
-     * @return \Illuminate\Http\Response
+     * @OA\Get(
+     *     path="/api/products/{id}",
+     *     tags={"Products"},
+     *     summary="Get product detail",
+     *     description="Get product detail",
+     *     @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         description="product id",
+     *         required=true,
+     *         @OA\Schema(
+     *             type="integer"
+     *         )
+     *     ),
+     *     security={{"bearer":{}}},
+     *     @OA\Response(
+     *         response=200,
+     *         description="successful operation",
+     *     ),
+     *     @OA\Response(
+     *         response=404,
+     *         description="Product not found"
+     *     )
+     * )
      */
-    public function show($id)
+    public function show(int $id): JsonResponse
     {
         try {
-            return $this->responseSuccess([], 'Product fetched successfully.');
-        } catch (Exception $e) {
-            return $this->responseError([], $e->getMessage());
+            return $this->responseSuccess($this->productRepository->getById($id), 'Product fetched successfully.');
+        } catch (Exception $exception) {
+            return $this->responseError([], $exception->getMessage(), $exception->getCode());
         }
     }
 
     /**
-     * Update the specified resource in storage.
-     *
-     * @param  \Illuminate\Http\Request  $request
-     * @param  int  $id
-     * @return \Illuminate\Http\Response
+     * @OA\POST(
+     *     path="/api/products/{id}",
+     *     tags={"Products"},
+     *     summary="Update product",
+     *     description="Update product",
+     *     security={{"bearer":{}}},
+     *     @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         description="product id",
+     *         required=true,
+     *         @OA\Schema(
+     *             type="integer"
+     *         )
+     *     ),
+     *     @OA\Parameter(
+     *         name="_method",
+     *         in="query",
+     *         description="request method",
+     *         required=true,
+     *         @OA\Schema(
+     *             type="string",
+     *             default="PUT"
+     *         )
+     *     ),
+     *     @OA\RequestBody(
+     *         description="Product objects",
+     *         required=true,
+     *         @OA\MediaType(
+     *             mediaType="multipart/form-data",
+     *             @OA\Schema(
+     *                 type="object",
+     *                 @OA\Property(
+     *                     property="id",
+     *                     description="Product id",
+     *                     type="integer",
+     *                     example="Product id"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="title",
+     *                     description="Product title",
+     *                     type="string",
+     *                     example="Product title"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="slug",
+     *                     description="Product slug",
+     *                     type="string",
+     *                     example="product-title"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="price",
+     *                     description="Product price",
+     *                     type="integer",
+     *                     example="200"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="image",
+     *                     description="Product image",
+     *                     type="string",
+     *                     format="binary"
+     *                 ),
+     *                 required={"title", "price", "slug"}
+     *             )
+     *         ),
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="successful operation",
+     *     ),
+     *     @OA\Response(
+     *         response=400,
+     *         description="Invalid input"
+     *     )
+     * )
      */
-    public function update(Request $request, $id)
+    public function update(ProductUpdateRequest $request, int $id): JsonResponse
     {
-        //
+        try {
+            return $this->responseSuccess($this->productRepository->update($id, $request->all()), 'Product updated successfully.');
+        } catch (Exception $exception) {
+            return $this->responseError([], $exception->getMessage(), $exception->getCode());
+        }
     }
 
     /**
-     * Remove the specified resource from storage.
-     *
-     * @param  int  $id
-     * @return \Illuminate\Http\Response
+     * @OA\DELETE(
+     *     path="/api/products/{id}",
+     *     tags={"Products"},
+     *     summary="Delete product",
+     *     description="Delete product",
+     *     @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         description="product id",
+     *         required=true,
+     *         @OA\Schema(
+     *             type="integer"
+     *         )
+     *     ),
+     *     security={{"bearer":{}}},
+     *     @OA\Response(
+     *         response=200,
+     *         description="successful operation",
+     *     ),
+     *     @OA\Response(
+     *         response=404,
+     *         description="Product not found"
+     *     )
+     * )
      */
-    public function destroy($id)
+    public function destroy(int $id): JsonResponse
     {
-        //
+        try {
+            return $this->responseSuccess($this->productRepository->delete($id), 'Product deleted successfully.');
+        } catch (Exception $exception) {
+            return $this->responseError([], $exception->getMessage(), $exception->getCode());
+        }
     }
 }
